daemon: don't set LANG to empty value

This makes PAM not set it to a proper value later.

https://bugzilla.gnome.org/show_bug.cgi?id=649413